--- a/06day/index.html
+++ b/06day/index.html
@@ -6,7 +6,7 @@
     <title>06 day</title>
 </head>
 <body>
-    <h1>Hello world!</h1>
+    <h1>Hell</h1>
     
    <script src="../05day/script.js"></script>
 </body>
