Modificated index.html into 6day

--- a/06day/index.html
+++ b/06day/index.html
@@ -6,7 +6,8 @@
     <title>06 day</title>
 </head>
 <body>
-    <h1>Hell</h1>
+    <h1>Hello</h1>
+    <h2>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quod reprehenderit nam laboriosam eum iure ducimus nihil ratione alias impedit voluptatem iusto ipsam debitis magni voluptas est, perspiciatis suscipit laudantium? Nostrum!</h2>
     
    <script src="../05day/script.js"></script>
 </body>
